Fix spacing on list titles and buttons
Set max-widths to avoid awkward wrapping and breaking

--- a/assets/styles/breakpoints.scss
+++ b/assets/styles/breakpoints.scss
@@ -26,3 +26,13 @@
     width: 60%;
   }
 }
+
+@include breakpoint(md) {
+  .profile-contents {
+    width: 50%;
+  }
+
+  .list-title {
+    max-width: 85%;
+  }
+}
