--- a/assets/styles/profile.scss
+++ b/assets/styles/profile.scss
@@ -107,6 +107,11 @@
   }
 }
 
+.view-list {
+  display: inline-block;
+  max-width: 80%;
+}
+
 .list-title {
   display: inline-block;
   max-width: 73%;
